Add html/src/css from website v1

--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Block&Bass</title>
+	<meta charset="utf-8" />
+	<title>Block & Bass</title>
+	<meta name="author" content="Davey Smit" />
+	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+
 </head>
+
 <body>
-    <h1>Hello World!</h1>
+	<div class="base">
+		<div class="dlclient" onclick="window.location.href = '/download.html'">
+			Download Installer
+			<img class="image-download" src="img/dl.png" alt="download icon" />
+		</div>
+		<div class="logo">
+			<img src="img/blocknbass_icon_trans.png" alt="Block & Bass icon transparent">
+		</div>
+
+		<div class="boxes">
+			<div class="menu">
+				<div class="menubox" onclick="window.location.href = '/'">
+					Home
+				</div>
+				<div class="menubox" onclick="window.location.href = '/installation.html'">
+					Installation Guide
+				</div>
+				<div class="menubox" onclick="window.location.href = '/faq.html'">
+					FAQ
+				</div>
+				<div class="menubox" onclick="window.location.href = '/livestream.html'">
+					Livestream
+				</div>
+
+			</div>
+			<div class="mainbox">
+				<h1>Home</h1>
+				<img class="hero" src="img/blocknbass_preview.png" alt="Block & Bass preview hero image"/>
+			</div>
+		</div>
+	</div>
 </body>
+
 </html>
