removed negative time

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     <meta property="og:url" content="https://blocknbass.com/">
     <meta property="og:title" content="Block & Bass">
     <meta property="og:description" content="Block & Bass, The one and only minecraft drum and bass party!!">
-    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="og:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://blocknbass.com/">
     <meta property="twitter:title" content="Block & Bass">
     <meta property="twitter:description" content="Block & Bass, The one and only minecraft drum and bass party!!">
-    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="twitter:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
     <!-- Cloudflare Web Analytics -->
     <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
@@ -86,13 +88,11 @@
                     <p class="d text-5xl md:text-6xl text-gray-700">00</p>
                     <p class="text-sm md:text-base xl:text-md text-purple-700 font-mc uppercase">days</p>
                 </div>
-                <div
-                    class="w-2/12 flex flex-col text-center align-center justify-center md:w-min md:px-12 md:py-7">
+                <div class="w-2/12 flex flex-col text-center align-center justify-center md:w-min md:px-12 md:py-7">
                     <p class="h text-5xl md:text-6xl text-gray-700">00</p>
                     <p class="text-sm md:text-base xl:text-md text-purple-700 font-mc uppercase">hours</p>
                 </div>
-                <div
-                    class="w-2/12  flex flex-col text-center align-center justify-center md:w-min md:px-12 md:py-7">
+                <div class="w-2/12  flex flex-col text-center align-center justify-center md:w-min md:px-12 md:py-7">
                     <p class="m text-5xl md:text-6xl text-gray-700">00</p>
                     <p class="text-sm md:text-base xl:text-md text-purple-700 font-mc uppercase">minutes</p>
                 </div>
@@ -418,65 +418,67 @@
             <div class="flex-initial">&copy; 2020 Block & Bass</div>
             <div class="flex-initial">
                 <div class="fas fa-terminal hover:text-green-400"></div> with
-                <div class="fas fa-heart hover:text-red-600"></div> by <a class="hover:underline hover:text-gray-600" href="https://xanderd.com">XanderD.</a></div>
+                <div class="fas fa-heart hover:text-red-600"></div> by <a class="hover:underline hover:text-gray-600"
+                    href="https://xanderd.com">XanderD.</a>
+            </div>
         </div>
     </footer>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <script>
-    const artistsData = () => ({ 
+    const artistsData = () => ({
         artists: [
-            { 
-                time: '17:00 - 18:00', 
-                name: 'Arne', 
-                socials: { 
-                    twitter: 'https://twitter.com/ArneDnB', 
+            {
+                time: '17:00 - 18:00',
+                name: 'Arne',
+                socials: {
+                    twitter: 'https://twitter.com/ArneDnB',
                     soundcloud: 'https://soundcloud.com/aaarneee',
                     instagram: 'https://www.instagram.com/aaarneeee/',
                     facebook: 'https://www.facebook.com/ArneDnB/'
-                } 
+                }
             },
-            { 
-                time: '18:00 - 19:00', 
-                name: 'Dustkey', 
-                socials: { 
-                    facebook: 'https://www.facebook.com/dustkey/', 
+            {
+                time: '18:00 - 19:00',
+                name: 'Dustkey',
+                socials: {
+                    facebook: 'https://www.facebook.com/dustkey/',
                     spotify: 'https://open.spotify.com/artist/3cFmkfAFtVpp40znDmCo0d?si=LPOTOg3yQ8yo0MAwx3emNg',
                     soundcloud: 'https://soundcloud.com/dustkey-hq',
-                } 
+                }
             },
-            { 
-                time: '19:00 - 20:00', 
-                name: 'Edlan', 
-                socials: { 
-                    soundcloud: 'http://soundcloud.com/djedlan', 
+            {
+                time: '19:00 - 20:00',
+                name: 'Edlan',
+                socials: {
+                    soundcloud: 'http://soundcloud.com/djedlan',
                     facebook: 'https://www.facebook.com/djedlan/',
                     spotify: 'https://open.spotify.com/artist/0kmYD4ijzuztxYkzJBbQQa?si=vLXWR5qZSTuINSADTb-vEQ'
-                } 
+                }
             },
-            { 
+            {
                 time: '20:00 - 21:00',
                 name: 'Andromedik',
-                socials: { 
-                    facebook: 'https://www.facebook.com/AndromedikMusic', 
+                socials: {
+                    facebook: 'https://www.facebook.com/AndromedikMusic',
                     spotify: 'https://open.spotify.com/artist/7miXLG9boDOGHJaEelSL7T?si=i0igRpnIS5SEh36htddrbg',
                     soundcloud: 'https://soundcloud.com/andromedik',
                     twitter: 'https://twitter.com/AndromedikMusic',
                     instagram: 'https://www.instagram.com/andromedik.official/'
-                } 
+                }
             },
-            { 
-                time: '21:00 - 22:00', 
-                name: 'Polygon', 
-                socials: { 
-                    soundcloud: 'https://soundcloud.com/polygonsound', 
+            {
+                time: '21:00 - 22:00',
+                name: 'Polygon',
+                socials: {
+                    soundcloud: 'https://soundcloud.com/polygonsound',
                     facebook: 'https://www.facebook.com/polygonsound/',
                     spotify: 'https://open.spotify.com/artist/5BGIoAtF2cwgcydpnUyFkF?si=NZA7NpWQRDuN-c-aeFL0Fw',
-                } 
+                }
             },
-            { time: '22:00 - 23:00', name: 'Toeterboys', socials: { } }
-        ] 
+            { time: '22:00 - 23:00', name: 'Toeterboys', socials: {} }
+        ]
     });
 </script>
 <script>
@@ -490,13 +492,24 @@
         const hoursBox = qs('.h');
         const minuteBox = qs('.m');
         const secondsBox = qs('.s');
-        setInterval(() => {
-            const dur = moment.duration(eventDate.diff(moment()));
-            daysBox.innerText = dur.get('days')
-            hoursBox.innerText = dur.get('hours')
-            minuteBox.innerText = dur.get('minutes')
-            secondsBox.innerText = dur.get('seconds')
-        }, 1000)
+        if (eventDate.diff(moment()) > 0) {
+            setInterval(() => {
+                const now = moment();
+                if (now === eventDate) {
+                    daysBox.innerText = 0
+                    hoursBox.innerText = 0
+                    minuteBox.innerText = 0
+                    secondsBox.innerText = 0
+                    return;
+                }
+                console.log(moment('2019-12-19 17:00:00').diff(moment()))
+                const dur = moment.duration(eventDate.diff(now));
+                daysBox.innerText = dur.get('days')
+                hoursBox.innerText = dur.get('hours')
+                minuteBox.innerText = dur.get('minutes')
+                secondsBox.innerText = dur.get('seconds')
+            }, 1000)
+        }
     });
 </script>
 
