--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <p class="font-mc text-5xl md:text-6xl side-lines">Download</p>
                 <p class="mb-6 md:text-lg">Download the installer right here</p>
                 <a class="font-mc bg-yellow-400 block overflow-hidden rounded-2xl w-3/4 mx-auto py-3 md:w-1/3 xl:1/4 uppercase text-gray-800"
-                    href="<download link here>">
+                    href="javascript:alert('Not available at this time. Please check back later.');">
                     <span>Download</span>
                 </a>
             </div>
