--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <h2 class="text-4xl md:text-5xl mb-6 uppercase text-center text-blue-400 w-full side-lines">
                     how to install
                 </h2>
-                <p class="text-center">Comming soon!</p>
+                <p class="text-center">Coming soon!</p>
             </div>
 
             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1900 600"
