fix preview image, added favicons, added manifest.json, updated some seo stuff, added social media into hero

--- a/index.html
+++ b/index.html
@@ -7,22 +7,28 @@
     <title>Block & Bass</title>
     <meta name="title" content="Block & Bass">
     <meta name="description" content="Block & Bass, The one and only minecraft drum and bass party!!">
+    <meta name="keywords" content="dnb drum&bass drum and bass minecraft block and bass blocknbass block&bass Block&Bass BlockNBass Minecraft DnB festival party">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://blocknbass.com/">
     <meta property="og:title" content="Block & Bass">
     <meta property="og:description" content="Block & Bass, The one and only minecraft drum and bass party!!">
-    <meta property="og:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="og:image" content="/assets/hero.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://blocknbass.com/">
     <meta property="twitter:title" content="Block & Bass">
     <meta property="twitter:description" content="Block & Bass, The one and only minecraft drum and bass party!!">
-    <meta property="twitter:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="twitter:image" content="/assets/hero.jpg">
 
     <!-- Cloudflare Web Analytics -->
     <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
@@ -69,6 +75,18 @@
             background: linear-gradient(0deg, rgba(2, 0, 36, 0) 20%, rgba(147, 197, 253, 1) 80%);
         }
 
+        .bg-discord {
+            background-color: #4E5D94;
+        }
+
+        .text-discord {
+            color: #4E5D94;
+        }
+
+        .hover-text-discord:hover {
+            color: #4E5D94;
+        }
+
         .side-lines::before,
         .side-lines::after {
             content: ' － '
@@ -79,12 +97,40 @@
 <body class="bg-blue-300 bg-opacity-50">
     <div class="hero h-screen overflow-hidden relative bg-blue-300 bg-opacity-50">
         <div
+            class="z-10 w-3/4 md:w-min mx-auto absolute bottom-0 left-1/2 transform -translate-x-1/2 mb-6 flex justify-center text-2xl md:flex-col md:-translate-y-1/2 md:-translate-x-0 md:left-0 md:top-1/2 md:text-base">
+            <a href="https://www.facebook.com/blocknbass" target="_blank"
+                class="w-12 h-12 md:w-9 md:h-9 block m-2">
+                <span class="w-full h-full text-gray-100 rounded-2xl bg-blue-500 flex justify-center items-center hover:text-blue-500 hover:bg-gray-100">
+                    <i class="fab fa-facebook-f"></i>
+                </span>
+            </a>
+            <a href="https://twitter.com/BlockNBass" target="_blank"
+                class="w-12 h-12 md:w-9 md:h-9 block m-2">
+                
+                <span class="w-full h-full text-gray-100 rounded-2xl bg-blue-400 flex justify-center items-center hover:text-blue-400 hover:bg-gray-100">
+                    <i class="fab fa-twitter"></i>
+                </span>
+            </a>
+            <a :href="https://www.instagram.com/blocknbass/" target="_blank"
+                class="w-12 h-12 md:w-9 md:h-9 block text-gray-100 rounded-2xl bg-gradient-to-r hover:from-gray-100 hover:to-gray-100 m-2 from-red-400 via-pink-400 to-purple-500">
+                <span
+                    class="h-full w-full bg-clip-text hover:text-transparent text-gray-100 bg-gradient-to-r from-red-400 via-pink-400 to-purple-500 flex justify-center items-center">
+                    <i class="fab fa-instagram"></i>
+                </span>
+            </a>
+            <a href="https://blocknbass.com/discord" target="_blank"
+                class="w-12 h-12 md:w-9 md:h-9 m-2">
+                <span class="block text-gray-100 rounded-2xl bg-discord flex justify-center items-center hover-text-discord hover:bg-gray-100 w-full h-full">
+                    <i class="fab fa-discord"></i>
+                </span>
+            </a>
+        </div>
+        <div
             class="w-full absolute text-center w-auto left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2 p-5 md:p-0">
             <h1 class="font-mc text-5xl md:text-8xl xl:text-9xl">Block & Bass</h1>
             <h2 class="mb-12 text-xl md:text-2xl xl:text-4xl">The minecraft DnB party</h2>
             <div class="flex mx-auto w-full md:w-min">
-                <div
-                    class="w-1/4 flex flex-col text-center align-center justify-center py-4 md:w-min md:px-12 md:py-7">
+                <div class="w-1/4 flex flex-col text-center align-center justify-center py-4 md:w-min md:px-12 md:py-7">
                     <p class="d text-5xl md:text-6xl text-gray-700">00</p>
                     <p class="text-sm md:text-base xl:text-md text-purple-700 font-mc uppercase">days</p>
                 </div>
@@ -477,7 +523,13 @@
                     spotify: 'https://open.spotify.com/artist/5BGIoAtF2cwgcydpnUyFkF?si=NZA7NpWQRDuN-c-aeFL0Fw',
                 }
             },
-            { time: '22:00 - 23:00', name: 'Toeterboys', socials: {} }
+            { 
+                time: '22:00 - 23:00',
+                name: 'Toeterboys',
+                socials: {
+                    soundcloud: ' https://soundcloud.com/toeter-boys'
+                } 
+            }
         ]
     });
 </script>
