changed instagram icon because it was not clickable, changed preview image url, added toeterboys soundcloud

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Block & Bass</title>
     <meta name="title" content="Block & Bass">
-    <meta name="description" content="Block & Bass, The one and only minecraft drum and bass party!!">
-    <meta name="keywords" content="dnb drum&bass drum and bass minecraft block and bass blocknbass block&bass Block&Bass BlockNBass Minecraft DnB festival party">
+    <meta name="description" content="We bring the Drum & Bass rave to you!">
+    <meta name="keywords"
+        content="dnb drum&bass drum and bass minecraft block and bass blocknbass block&bass Block&Bass BlockNBass Minecraft DnB festival party">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -20,15 +21,15 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://blocknbass.com/">
     <meta property="og:title" content="Block & Bass">
-    <meta property="og:description" content="Block & Bass, The one and only minecraft drum and bass party!!">
-    <meta property="og:image" content="/assets/hero.jpg">
+    <meta property="og:description" content="We bring the Drum & Bass rave to you!">
+    <meta property="og:image" content="/assets/img/hero.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://blocknbass.com/">
     <meta property="twitter:title" content="Block & Bass">
-    <meta property="twitter:description" content="Block & Bass, The one and only minecraft drum and bass party!!">
-    <meta property="twitter:image" content="/assets/hero.jpg">
+    <meta property="twitter:description" content="We bring the Drum & Bass rave to you!">
+    <meta property="twitter:image" content="/assets/img/hero.jpg">
 
     <!-- Cloudflare Web Analytics -->
     <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
@@ -98,29 +99,28 @@
     <div class="hero h-screen overflow-hidden relative bg-blue-300 bg-opacity-50">
         <div
             class="z-10 w-3/4 md:w-min mx-auto absolute bottom-0 left-1/2 transform -translate-x-1/2 mb-6 flex justify-center text-2xl md:flex-col md:-translate-y-1/2 md:-translate-x-0 md:left-0 md:top-1/2 md:text-base">
-            <a href="https://www.facebook.com/blocknbass" target="_blank"
-                class="w-12 h-12 md:w-9 md:h-9 block m-2">
-                <span class="w-full h-full text-gray-100 rounded-2xl bg-blue-500 flex justify-center items-center hover:text-blue-500 hover:bg-gray-100">
+            <a href="https://www.facebook.com/blocknbass" target="_blank" class="w-12 h-12 md:w-9 md:h-9 block m-2">
+                <span
+                    class="w-full h-full text-gray-100 rounded-2xl bg-blue-500 flex justify-center items-center hover:text-blue-500 hover:bg-gray-100">
                     <i class="fab fa-facebook-f"></i>
                 </span>
             </a>
-            <a href="https://twitter.com/BlockNBass" target="_blank"
-                class="w-12 h-12 md:w-9 md:h-9 block m-2">
-                
-                <span class="w-full h-full text-gray-100 rounded-2xl bg-blue-400 flex justify-center items-center hover:text-blue-400 hover:bg-gray-100">
+            <a href="https://twitter.com/BlockNBass" target="_blank" class="w-12 h-12 md:w-9 md:h-9 block m-2">
+
+                <span
+                    class="w-full h-full text-gray-100 rounded-2xl bg-blue-400 flex justify-center items-center hover:text-blue-400 hover:bg-gray-100">
                     <i class="fab fa-twitter"></i>
                 </span>
             </a>
-            <a :href="https://www.instagram.com/blocknbass/" target="_blank"
-                class="w-12 h-12 md:w-9 md:h-9 block text-gray-100 rounded-2xl bg-gradient-to-r hover:from-gray-100 hover:to-gray-100 m-2 from-red-400 via-pink-400 to-purple-500">
-                <span
-                    class="h-full w-full bg-clip-text hover:text-transparent text-gray-100 bg-gradient-to-r from-red-400 via-pink-400 to-purple-500 flex justify-center items-center">
+            <span class="w-12 h-12 md:w-9 md:h-9 block text-gray-100 rounded-2xl bg-gradient-to-r hover:from-gray-100 hover:to-gray-100 m-2 from-red-400 via-pink-400 to-purple-500">
+                <a href="https://www.instagram.com/blocknbass/" target="_blank"
+                    class="block h-full w-full bg-clip-text hover:text-transparent text-gray-100 bg-gradient-to-r from-red-400 via-pink-400 to-purple-500 flex justify-center items-center">
                     <i class="fab fa-instagram"></i>
-                </span>
-            </a>
-            <a href="https://blocknbass.com/discord" target="_blank"
-                class="w-12 h-12 md:w-9 md:h-9 m-2">
-                <span class="block text-gray-100 rounded-2xl bg-discord flex justify-center items-center hover-text-discord hover:bg-gray-100 w-full h-full">
+                </a>
+            </span>
+            <a href="https://blocknbass.com/discord" target="_blank" class="w-12 h-12 md:w-9 md:h-9 m-2">
+                <span
+                    class="block text-gray-100 rounded-2xl bg-discord flex justify-center items-center hover-text-discord hover:bg-gray-100 w-full h-full">
                     <i class="fab fa-discord"></i>
                 </span>
             </a>
@@ -128,7 +128,7 @@
         <div
             class="w-full absolute text-center w-auto left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2 p-5 md:p-0">
             <h1 class="font-mc text-5xl md:text-8xl xl:text-9xl">Block & Bass</h1>
-            <h2 class="mb-12 text-xl md:text-2xl xl:text-4xl">The minecraft DnB party</h2>
+            <h2 class="mb-12 text-xl md:text-2xl xl:text-4xl">We bring the Drum & Bass rave to you!</h2>
             <div class="flex mx-auto w-full md:w-min">
                 <div class="w-1/4 flex flex-col text-center align-center justify-center py-4 md:w-min md:px-12 md:py-7">
                     <p class="d text-5xl md:text-6xl text-gray-700">00</p>
@@ -523,12 +523,12 @@
                     spotify: 'https://open.spotify.com/artist/5BGIoAtF2cwgcydpnUyFkF?si=NZA7NpWQRDuN-c-aeFL0Fw',
                 }
             },
-            { 
+            {
                 time: '22:00 - 23:00',
                 name: 'Toeterboys',
                 socials: {
                     soundcloud: ' https://soundcloud.com/toeter-boys'
-                } 
+                }
             }
         ]
     });
