Some typos fixed

--- a/index.html
+++ b/index.html
@@ -395,12 +395,12 @@
                 <rect x="1700" y="100" width="100" height="100" style="fill:#95c6e3" />
                 <rect x="1800" y="100" width="100" height="100" style="fill:#95c6e3" />
             </svg>
-            <div class="w-11/12 md:w-2/5 mx-auto">
+            <div class="w-11/12 md:w-2/5 lg:1/4 mx-auto">
                 <h2 class="text-4xl md:text-5xl mb-6 uppercase text-center text-blue-400 w-full side-lines">
                     how to install
                 </h2>
                 <div class="w-full md:text-xl">
-                    <p>start by downloading the Block and Bass fabric jar file from the link above or <a href="/assets/ff251ed1-da32-571d-aea8-9d0cd0541de4/blocknbass-fabric-installer-0.6.1.jar" class="text-blue-600 hover:underline">click here</a>.</p>
+                    <p>Start by downloading the Block and Bass fabric jar file from the link above or <a href="/assets/ff251ed1-da32-571d-aea8-9d0cd0541de4/blocknbass-fabric-installer-0.6.1.jar" class="text-blue-600 hover:underline">click here</a>.</p>
                     <p>Once it is done downloading double click on the jar file to open it.</p>
                     <p>Keep the default settings, unless you have installed minecraft on another location on you computer. Then just change the install location.</p>
                     <p>After this click install and let the installer do it's job.</p>
@@ -415,7 +415,7 @@
                     <img src="/assets/img/how-to/5.png" alt="Step one" class="w-full m-5 mx-auto">
                     <p>Now change the value of <span class="font-bold">-Xmx2G</span> to the amount of RAM memory you want minecraft to use, preferabbly 4 or more. Do know you can give it only as much as your pc can handle.</p>
                     <img src="/assets/img/how-to/6.png" alt="Step one" class="w-full m-5 mx-auto">
-                    <p>Now you are ready to start up minecraft for real. You do have to choose the Block & Bass profile in order for the mods to work.</p>
+                    <p>Now you are ready to start up minecraft for real. Make sure you have the Block & Bass profile selected in order for the mods to work.</p>
                     <p>Before joining the server change your resource pack to the Block & Bass resource pack so you have the best expierence during the event. Don't worry the resourcepack is installed allong with all the mods.</p>
                     <p>You can change your resource pack under Settings, then resource packs and moving the Block & Bass resource pack to the right.</p>
                     <img src="/assets/img/how-to/7.png" alt="Step one" class="w-full m-5 mx-auto">
